разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,56 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <img src="img/sedona.svg" width="150" height="150" alt="Логотип">
+        <ul class="site-navigation">
+          <li><a href="information.html">Информация</a></li>
+          <li><a href="photo.html">Фото и видео</a></li>
+          <li><a href="map-state.html">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <main class="container">
+      <h1 class="visually-hidden">Седона</h1>
+      <section class="banner">
+        <img src="img/sedona-banner.svg" width="320" height="200" alt="Баннер">
+      </section>
 
+      <section class="head">
+        <h2>седона - небольшой городок в аризоне, заслуживающий большего!</h2>
+        <p>рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
+      </section>
+
+      <!--Здесь будет раздел с причинами-->
+
+      <section class="sentence">
+        <span class="sentence-item">заинтересовались?</span>
+        <p>укажите предполагаемые даты поездки, и мы покажем лучшие предложения гостинец в седоне</p>
+      </section>
+
+      <section class="modal">
+        <h2>поиск гостиницы в седоне</h2>
+        <!--Здесть будет форма-->
+        <span class="modal-close">x</span>
+      </section>
+
+      <footer class="main-footer">
+        <p class="footer-visit">#visitsedona</p>
+        <div class="footer-social">
+          <ul>
+            <li><a class="button-social" href="#">Твиттер</a></li>
+            <li><a class="button-social" href="#">Фэйсбук</a></li>
+            <li><a class="button-social" href="#">Ютуб</a></li>
+          </ul>
+        </div>
+        <p class="footer-copyright">
+          <b>website by</b>
+          <img src="logo.svg" width="100" height="80" alt="Логотип разработчика">
+        </p>
+      </footer>
+    </main>
   </body>
 </html>
