--- a/inner.html
+++ b/inner.html
@@ -1,99 +1,128 @@
 <!DOCTYPE html>
 <html lang="ru">
- <head>
-   <meta charset="utf-8">
-   <title>HTML Academy: Седона</title>
- </head>
- <body>
- <header class="main-header">
-   <nav class="main-navigation">
-     <a class="main-header-logo" href="index.html">
-     <img src="img/sedona.svg" width="150" height="150" alt="Логотип">
-     </a>
-     <ul class="site-navigation">
-       <li><a href="information.html">Информация</a></li>
-       <li><a href="photo.html">Фото и видео</a></li>
-       <li><a href="map-state.html">Карта штата</a></li>
-       <li class="site-navigation"><a href="hotels.html">Гостиницы</a></li>
-     </ul>
-   </nav>
- </header>
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Седона</title>
+  </head>
+  <body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo" href="index.html">
+      <img src="img/sedona.svg" width="150" height="150" alt="Логотип">
+      </a>
+      <ul class="site-navigation">
+        <li><a href="information.html">Информация</a></li>
+        <li><a href="photo.html">Фото и видео</a></li>
+        <li><a href="map-state.html">Карта штата</a></li>
+        <li class="site-navigation"><a href="inner.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+  </header>
 
- <main class="container">
-   <h1 class="visually-hidden">Гостиницы</h1>
+  <main class="container">
+    <h1 class="visually-hidden">Гостиницы</h1>
 
-   <!--Здесь будет форма-->
+    <!--Здесь будет форма-->
 
-   <section class="catalog">
-     <ul class="catalog-list">
-       <li class="catalog-item">
-         <p class="catalog-image-item">
-          <a href="catalog-item.html">
-            <img src="img/hotel.jpg" width="50" height="40" alt="Фото гостиницы">
-          </a>
-         </p>
-         <h2 class="catalog-item-title">
-           <a href="catalog-item.html">amara record & spa</a>
-         </h2>
-         <span>гостиница</span>
-         <span>от 4000 р.</span>
-         <p class="catalog-item-button">
-           <a class="button-more" href="#">подробнее</a>
-           <a class="button-booking" href="#">забронировать</a>
-         </p>
-         <p class="catalog-item-rating">рейтинг:8,5</p>
-       </li>
-       <li class="catalog-item">
-         <p class="catalog-image-item">
-           <a href="catalog-item.html">
-             <img src="img/motel.jpg" width="50" height="40" alt="Фото мотеля">
-           </a>
-         </p>
-         <h2 class="catalog-item-title">
-           <a href="catalog-item.html">desert quail inn</a>
-         </h2>
-         <span>мотель</span>
-         <span>от 3000 р.</span>
-         <p class="catalog-item-button">
-           <a class="button-more" href="#">подробнее</a>
-           <a class="button-booking" href="#">забронировать</a>
-         </p>
-         <p class="catalog-item-rating">рейтинг:8,9</p>
-       </li>
-       <li class="catalog-item">
-         <p class="catalog-image-item">
-           <a href="catalog-item.html">
-             <img src="img/apartments.jpg" width="50" height="40" alt="Фото апартаментов">
-           </a>
-         </p>
-         <h2 class="catalog-item-title">
-           <a href="catalog-item.html">villas at poco diablo</a>
-         </h2>
-         <span>апартаменты</span>
-         <span>от 2000 р.</span>
-         <p class="catalog-item-button">
-           <a class="button-more" href="#">подробнее</a>
-           <a class="button-booking" href="#">забронировать</a>
-         </p>
-         <p class="catalog-item-rating">рейтинг:9,2</p>
-       </li>
-     </ul>
-   </section>
- </main>
+    <section class="catalog">
+      <ul class="catalog-list">
+        <li class="catalog-item">
+          <div class="catalog-item-left">
+            <a class="catalog-image-item" href="catalog-item.html">
+              <img src="img/hotel.jpg" width="50" height="40" alt="Фото гостиницы">
+            </a>
+            <div class="catalog-item-info">
+              <h2 class="catalog-item-title">
+                <a href="catalog-item.html">Amara record & spa</a>
+              </h2>
+              <span>Гостиница</span>
+              <span>От 4000 р.</span>
+              <p class="catalog-item-button">
+                <a class="button-more" href="#">Подробнее</a>
+                <a class="button-booking" href="#">Забронировать</a>
+              </p>
+            </div>
+          </div>
+          <div class="hotel-rating">
+            <div class="hotel-rating-stars">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            <p class="hotel-rating-text">Рейтинг:8,5</p>
+          </div>
+        </li>
 
- <footer class="main-footer">
-   <p class="footer-visit">#visitsedona</p>
-   <div class="footer-social">
-     <ul>
-       <li><a class="button-social" href="#">Твиттер</a></li>
-       <li><a class="button-social" href="#">Фэйсбук</a></li>
-       <li><a class="button-social" href="#">Ютуб</a></li>
-     </ul>
-   </div>
-   <p class="footer-copyright">
-     <b>website by</b>
-     <img src="logo.svg" width="100" height="80" alt="Логотип разработчика">
-   </p>
- </footer>
- </body>
+        <li class="catalog-item">
+          <div class="catalog-item-left">
+            <a class="catalog-image-item" href="catalog-item.html">
+              <img src="img/motel.jpg" width="50" height="40" alt="Фото мотеля">
+            </a>
+            <div class="catalog-item-info">
+              <h2 class="catalog-item-title">
+                <a href="catalog-item.html">Desert quail inn</a>
+              </h2>
+              <span>Мотель</span>
+              <span>От 3000 р.</span>
+              <p class="catalog-item-button">
+                <a class="button-more" href="#">Подробнее</a>
+                <a class="button-booking" href="#">Забронировать</a>
+              </p>
+            </div>
+          </div>
+          <div class="hotel-rating">
+            <div class="hotel-rating-stars">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            <p class="hotel-rating-text">Рейтинг:8,9</p>
+          </div>
+        </li>
+
+        <li class="catalog-item">
+          <div class="catalog-item-left">
+            <a class="catalog-image-item" href="catalog-item.html">
+              <img src="img/apartments.jpg" width="50" height="40" alt="Фото апартаментов">
+            </a>
+            <div class="catalog-item-info">
+              <h2 class="catalog-item-title">
+                <a href="catalog-item.html">Villas at poco diablo</a>
+              </h2>
+              <span>Апартаменты</span>
+              <span>От 2000 р.</span>
+              <p class="catalog-item-button">
+                <a class="button-more" href="#">Подробнее</a>
+                <a class="button-booking" href="#">Забронировать</a>
+              </p>
+            </div>
+          </div>
+          <div class="hotel-rating">
+            <div class="hotel-rating-stars">
+              <span></span>
+              <span></span>
+            </div>
+            <p class="hotel-rating-text">Рейтинг:9.2</p>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="main-footer">
+    <p class="footer-visit">#visitsedona</p>
+    <div class="footer-social">
+      <ul>
+        <li><a class="button-social" href="#">Твиттер</a></li>
+        <li><a class="button-social" href="#">Фэйсбук</a></li>
+        <li><a class="button-social" href="#">Ютуб</a></li>
+      </ul>
+    </div>
+    <p class="footer-copyright">
+      <b>website by</b>
+      <img src="logo.svg" width="100" height="80" alt="Логотип разработчика">
+    </p>
+  </footer>
+  </body>
 </html>
