--- a/index.html
+++ b/index.html
@@ -5,56 +5,56 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <img src="img/sedona.svg" width="150" height="150" alt="Логотип">
-        <ul class="site-navigation">
-          <li><a href="information.html">Информация</a></li>
-          <li><a href="photo.html">Фото и видео</a></li>
-          <li><a href="map-state.html">Карта штата</a></li>
-          <li><a href="hotels.html">Гостиницы</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="container">
+      <header class="main-header">
+        <nav class="main-navigation">
+          <img src="img/sedona.svg" width="150" height="150" alt="Логотип">
+          <ul class="site-navigation">
+            <li><a href="information.html">Информация</a></li>
+            <li><a href="photo.html">Фото и видео</a></li>
+            <li><a href="map-state.html">Карта штата</a></li>
+            <li><a href="inner.html">Гостиницы</a></li>
+          </ul>
+        </nav>
+      </header>
 
-    <main class="container">
-      <h1 class="visually-hidden">Седона</h1>
-      <section class="banner">
-        <img src="img/sedona-banner.svg" width="320" height="200" alt="Баннер">
-      </section>
+      <main>
+        <h1 class="visually-hidden">Седона</h1>
+        <section class="banner">
+          <img src="img/sedona-banner.svg" width="320" height="200" alt="Баннер">
+        </section>
 
-      <section class="head">
-        <h2>седона - небольшой городок в аризоне, заслуживающий большего!</h2>
-        <p>рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
-      </section>
+        <section class="head">
+          <h2>Седона - небольшой городок в аризоне, заслуживающий большего!</h2>
+          <p>Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
+        </section>
 
-      <!--Здесь будет раздел с причинами-->
+        <!--Здесь будет раздел с причинами-->
 
-      <section class="sentence">
-        <span class="sentence-item">заинтересовались?</span>
-        <p>укажите предполагаемые даты поездки, и мы покажем лучшие предложения гостинец в седоне</p>
-      </section>
+        <section class="sentence">
+          <span class="sentence-item">Заинтересовались?</span>
+          <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостинец в седоне</p>
+          <a class="search-button" href="#">Поиск гостиницы в седоне</a>
+          <section class="search-form">
+            <!--Здесть будет форма-->
+          </section>
+        </section>
+      </main>
 
-      <section class="modal">
-        <h2>поиск гостиницы в седоне</h2>
-        <!--Здесть будет форма-->
-        <span class="modal-close">x</span>
-      </section>
-    </main>
-
-    <footer class="main-footer">
-      <p class="footer-visit">#visitsedona</p>
-      <div class="footer-social">
-        <ul>
-          <li><a class="button-social" href="#">Твиттер</a></li>
-          <li><a class="button-social" href="#">Фэйсбук</a></li>
-          <li><a class="button-social" href="#">Ютуб</a></li>
-        </ul>
-      </div>
-      <p class="footer-copyright">
-        <b>website by</b>
-        <img src="logo.svg" width="100" height="80" alt="Логотип разработчика">
-      </p>
+      <footer class="main-footer">
+        <p class="footer-visit">#visitsedona</p>
+        <div class="footer-social">
+          <ul>
+            <li><a class="button-social" href="#">Твиттер</a></li>
+            <li><a class="button-social" href="#">Фэйсбук</a></li>
+            <li><a class="button-social" href="#">Ютуб</a></li>
+          </ul>
+        </div>
+        <p class="footer-copyright">
+          <b>website by</b>
+          <img src="logo.svg" width="100" height="80" alt="Логотип разработчика">
+        </p>
       </footer>
+    </div>
   </body>
 </html>
