Бонусное задание: дополняем разметку личного проекта

--- a/index.html
+++ b/index.html
@@ -24,12 +24,72 @@
           <img src="img/sedona-banner.svg" width="320" height="200" alt="Баннер">
         </section>
 
-        <section class="head">
+        <section class="subtitle">
           <h2>Седона - небольшой городок в аризоне, заслуживающий большего!</h2>
           <p>Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
         </section>
 
-        <!--Здесь будет раздел с причинами-->
+        <section class="text-image-block">
+          <div class="text-block left">
+            <h2>Настоящий городок</h2>
+            <span>-№1-</span>
+            <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+          </div>
+          <div class="image-block right">
+            <img src="img/reasons1.svg" width="300" height="100" alt="Настоящий городок">
+          </div>
+        </section>
+
+        <section class="offers">
+          <ul class="offers-list">
+            <li class="offers-item">
+              <img src="img/home.svg" width="50" height="50" alt="Жилье">
+              <h2>Жилье</h2>
+              <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="offers-item">
+              <img src="img/food.svg" width="50" height="50" alt="Еда">
+              <h2>Еда</h2>
+              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="offers-item">
+              <img src="img/souvenirs.svg" width="50" height="50" alt="Сувениры">
+              <h2>Сувениры</h2>
+              <p>Не только китайского, но и местного производства!</p>
+            </li>
+          </ul>
+        </section>
+
+        <section class="text-image-block">
+          <div class="text-block right">
+            <h2>Там есть мост дьявола</h2>
+            <span>-№2-</span>
+            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          </div>
+          <div class="image-block left">
+            <img src="img/reasons2.svg" width="300" height="100" alt="Мост дьявола">
+          </div>
+        </section>
+
+        <section class="reasons">
+          <ul class="reasons-list">
+            <li class="reasons-item">
+              <h2>Небольшая площадь</h2>
+              <span>-№3-</span>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="reasons-item">
+              <h2>Красивая дорога</h2>
+              <span>-№4-</span>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="reasons-item">
+              <h2>Мало туристов</h2>
+              <span>-№5-</span>
+              <p>Большинство едет в гранд каньон и толпится там</p>
+            </li>
+          </ul>
+        </section>
 
         <section class="sentence">
           <span class="sentence-item">Заинтересовались?</span>
@@ -39,6 +99,9 @@
             <!--Здесть будет форма-->
           </section>
         </section>
+
+        <!--Здесть будет карта-->
+
       </main>
 
       <footer class="main-footer">
