--- a/inner.html
+++ b/inner.html
@@ -24,6 +24,21 @@
 
     <!--Здесь будет форма-->
 
+    <section class="sorting">
+      <h2 class="sorting-search">Найдено:3</h2>
+      <div class="sorting-sections">
+        <span class="sorting-title">Сортировка:</span>
+        <ul class="sorting-list">
+          <li class="sorting-item price"><a href="#">По цене</a></li>
+          <li class="sorting-item"><a href="#">По типу</a></li>
+          <li class="sorting-item"><a href="#">По рейтингу</a></li>
+        </ul>
+      </div>
+      <div class="sorting-arrow">
+        <span></span>
+      </div>
+    </section>
+
     <section class="catalog">
       <ul class="catalog-list">
         <li class="catalog-item">
