--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
           <p>Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
         </section>
 
-        <section class="text-image-block">
-          <div class="text-block left">
+        <section class="feature">
+          <div class="feature-text">
             <h2>Настоящий городок</h2>
             <span>-№1-</span>
             <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
-          <div class="image-block right">
+          <div class="feature-image">
             <img src="img/reasons1.svg" width="300" height="100" alt="Настоящий городок">
           </div>
         </section>
@@ -60,14 +60,14 @@
           </ul>
         </section>
 
-        <section class="text-image-block">
-          <div class="text-block right">
+        <section class="feature">
+          <div class="feature-image">
+            <img src="img/reasons2.svg" width="300" height="100" alt="Мост дьявола">
+          </div>
+          <div class="feature-text">
             <h2>Там есть мост дьявола</h2>
             <span>-№2-</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-          </div>
-          <div class="image-block left">
-            <img src="img/reasons2.svg" width="300" height="100" alt="Мост дьявола">
           </div>
         </section>
 
