--- a/inner.html
+++ b/inner.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
-      <img src="img/sedona.svg" width="150" height="150" alt="Логотип">
+        <img src="img/sedona.svg" width="150" height="150" alt="Логотип">
       </a>
       <ul class="site-navigation">
         <li><a href="information.html">Информация</a></li>
@@ -35,7 +35,8 @@
         </ul>
       </div>
       <div class="sorting-arrow">
-        <span></span>
+        <a class="arrow-up" href="#"></a>
+        <a class="arrow-down" href="#"></a>
       </div>
     </section>
 
