Основное задание: готовим графику личного проекта

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="container">
       <header class="main-header">
         <nav class="main-navigation">
-          <img src="img/sedona.svg" width="150" height="150" alt="Логотип">
+          <img src="img/logo-sedona.svg" width="150" height="150" alt="Логотип">
           <ul class="site-navigation">
             <li><a href="information.html">Информация</a></li>
             <li><a href="photo.html">Фото и видео</a></li>
@@ -21,7 +21,7 @@
       <main>
         <h1 class="visually-hidden">Седона</h1>
         <section class="banner">
-          <img src="img/sedona-banner.svg" width="320" height="200" alt="Баннер">
+          <img src="img/intro-welcome.svg" width="320" height="200" alt="Баннер">
         </section>
 
         <section class="subtitle">
@@ -115,7 +115,9 @@
         </div>
         <p class="footer-copyright">
           <b>website by</b>
-          <img src="logo.svg" width="100" height="80" alt="Логотип разработчика">
+          <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/logo-htmlacademy.svg" width="100" height="80" alt="Логотип разработчика">
+          </a>
         </p>
       </footer>
     </div>
