--- a/inner.html
+++ b/inner.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
-        <img src="img/sedona.svg" width="150" height="150" alt="Логотип">
+        <img src="img/logo-sedona.svg" width="150" height="150" alt="Логотип">
       </a>
       <ul class="site-navigation">
         <li><a href="information.html">Информация</a></li>
@@ -45,7 +45,7 @@
         <li class="catalog-item">
           <div class="catalog-item-left">
             <a class="catalog-image-item" href="catalog-item.html">
-              <img src="img/hotel.jpg" width="50" height="40" alt="Фото гостиницы">
+              <img src="img/inner-pic1.jpg" width="50" height="40" alt="Фото гостиницы">
             </a>
             <div class="catalog-item-info">
               <h2 class="catalog-item-title">
@@ -73,7 +73,7 @@
         <li class="catalog-item">
           <div class="catalog-item-left">
             <a class="catalog-image-item" href="catalog-item.html">
-              <img src="img/motel.jpg" width="50" height="40" alt="Фото мотеля">
+              <img src="img/inner-pic2.jpg" width="50" height="40" alt="Фото мотеля">
             </a>
             <div class="catalog-item-info">
               <h2 class="catalog-item-title">
@@ -100,7 +100,7 @@
         <li class="catalog-item">
           <div class="catalog-item-left">
             <a class="catalog-image-item" href="catalog-item.html">
-              <img src="img/apartments.jpg" width="50" height="40" alt="Фото апартаментов">
+              <img src="img/inner-pic3.jpg" width="50" height="40" alt="Фото апартаментов">
             </a>
             <div class="catalog-item-info">
               <h2 class="catalog-item-title">
@@ -137,7 +137,9 @@
     </div>
     <p class="footer-copyright">
       <b>website by</b>
-      <img src="logo.svg" width="100" height="80" alt="Логотип разработчика">
+      <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="img/logo-htmlacademy.svg" width="100" height="80" alt="Логотип разработчика">
+      </a>
     </p>
   </footer>
   </body>
