Бонусное задание: завершаем подготовку графики личного проекта

--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
             <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
           <div class="feature-image">
-            <img src="img/reasons1.svg" width="300" height="100" alt="Настоящий городок">
+            <img src="img/index-pic1.jpg" width="300" height="100" alt="Настоящий городок">
           </div>
         </section>
 
         <section class="offers">
           <ul class="offers-list">
             <li class="offers-item">
-              <img src="img/home.svg" width="50" height="50" alt="Жилье">
+              <img src="img/icon-1.svg" width="50" height="50" alt="Жилье">
               <h2>Жилье</h2>
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="offers-item">
-              <img src="img/food.svg" width="50" height="50" alt="Еда">
+              <img src="img/icon-2.svg" width="50" height="50" alt="Еда">
               <h2>Еда</h2>
               <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="offers-item">
-              <img src="img/souvenirs.svg" width="50" height="50" alt="Сувениры">
+              <img src="img/icon-3.svg" width="50" height="50" alt="Сувениры">
               <h2>Сувениры</h2>
               <p>Не только китайского, но и местного производства!</p>
             </li>
@@ -62,7 +62,7 @@
 
         <section class="feature">
           <div class="feature-image">
-            <img src="img/reasons2.svg" width="300" height="100" alt="Мост дьявола">
+            <img src="img/index-pic2.jpg" width="300" height="100" alt="Мост дьявола">
           </div>
           <div class="feature-text">
             <h2>Там есть мост дьявола</h2>
@@ -98,10 +98,8 @@
           <section class="search-form">
             <!--Здесть будет форма-->
           </section>
+          <img src="img/map.png" width="300" height="200" alt="Карта">
         </section>
-
-        <!--Здесть будет карта-->
-
       </main>
 
       <footer class="main-footer">
