--- a/index.html
+++ b/index.html
@@ -91,13 +91,16 @@
           </ul>
         </section>
 
-        <section class="sentence">
-          <span class="sentence-item">Заинтересовались?</span>
+        <section class="search">
+          <span class="search-item">Заинтересовались?</span>
           <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостинец в седоне</p>
           <a class="search-button" href="#">Поиск гостиницы в седоне</a>
           <section class="search-form">
             <!--Здесть будет форма-->
           </section>
+        </section>
+        
+        <section class="map">
           <img src="img/map.png" width="300" height="200" alt="Карта">
         </section>
       </main>
