--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="container">
       <header class="main-header">
         <nav class="main-navigation">
-          <img src="img/logo-sedona.svg" width="150" height="150" alt="Логотип">
+          <img src="img/logo-sedona.svg" width="150" height="150" alt="Логотип города Седона">
           <ul class="site-navigation">
             <li><a href="information.html">Информация</a></li>
             <li><a href="photo.html">Фото и видео</a></li>
@@ -21,7 +21,7 @@
       <main>
         <h1 class="visually-hidden">Седона</h1>
         <section class="banner">
-          <img src="img/intro-welcome.svg" width="320" height="200" alt="Баннер">
+          <img src="img/intro-welcome.svg" width="320" height="200" alt="Баннер Добро пожаловать в Седону">
         </section>
 
         <section class="subtitle">
@@ -95,11 +95,37 @@
           <span class="search-item">Заинтересовались?</span>
           <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостинец в седоне</p>
           <a class="search-button" href="#">Поиск гостиницы в седоне</a>
-          <section class="search-form">
-            <!--Здесть будет форма-->
+          <section class="form">
+            <form class="form-search" action="https://echo.htmlacademy.ru" method="post">
+              <p>
+                <label class="form-arrival">Дата заезда:
+                  <input type="text" class="arrival" name="arrival" placeholder="24 апреля 2017">
+                </label>
+                <img src="img/calendar.svg" class="form-calendar" width="20" height="20" alt="Календарь">
+              </p>
+              <p>
+                <label class="form-departure">Дата выезда:
+                  <input type="text" class="departure" name="departure" placeholder="4 июля 2017">
+                </label>
+                <img src="img/calendar.svg" class="form-calendar" width="20" height="20" alt="Календарь">
+              </p>
+              <p>
+                <label class="form-adults">Взрослые:
+                  <input type="text" class="adults" name="adults" placeholder="2">
+                </label>
+              </p>
+              <p>
+                <label class="form-children">Дети:
+                  <input type="text" class="children" name="children" placeholder="0">
+                </label>
+              </p>
+              <p>
+                <button class="button" type="submit">Найти</button>
+              </p>
+            </form>
           </section>
         </section>
-        
+
         <section class="map">
           <img src="img/map.png" width="300" height="200" alt="Карта">
         </section>
