--- a/inner.html
+++ b/inner.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
-        <img src="img/logo-sedona.svg" width="150" height="150" alt="Логотип">
+        <img src="img/logo-sedona.svg" width="150" height="150" alt="Логотип города Седона">
       </a>
       <ul class="site-navigation">
         <li><a href="information.html">Информация</a></li>
@@ -54,8 +54,8 @@
               <span>Гостиница</span>
               <span>От 4000 р.</span>
               <p class="catalog-item-button">
-                <a class="button-more" href="#">Подробнее</a>
-                <a class="button-booking" href="#">Забронировать</a>
+                <button class="button-more" type="button">Подробнее</button>
+                <button class="button-booking" type="button">Забронировать</button>
               </p>
             </div>
           </div>
@@ -82,8 +82,8 @@
               <span>Мотель</span>
               <span>От 3000 р.</span>
               <p class="catalog-item-button">
-                <a class="button-more" href="#">Подробнее</a>
-                <a class="button-booking" href="#">Забронировать</a>
+                <button class="button-more" type="button">Подробнее</button>
+                <button class="button-booking" type="button">Забронировать</button>
               </p>
             </div>
           </div>
@@ -109,8 +109,8 @@
               <span>Апартаменты</span>
               <span>От 2000 р.</span>
               <p class="catalog-item-button">
-                <a class="button-more" href="#">Подробнее</a>
-                <a class="button-booking" href="#">Забронировать</a>
+                <button class="button-more" type="button">Подробнее</button>
+                <button class="button-booking" type="button">Забронировать</button>
               </p>
             </div>
           </div>
