--- a/index.html
+++ b/index.html
@@ -101,22 +101,26 @@
                 <label class="form-arrival">Дата заезда:
                   <input type="text" class="arrival" name="arrival" placeholder="24 апреля 2017">
                 </label>
-                <img src="img/calendar.svg" class="form-calendar" width="20" height="20" alt="Календарь">
+                <button class="form-calendar" type="button"></button>
               </p>
               <p>
                 <label class="form-departure">Дата выезда:
                   <input type="text" class="departure" name="departure" placeholder="4 июля 2017">
                 </label>
-                <img src="img/calendar.svg" class="form-calendar" width="20" height="20" alt="Календарь">
+                <button class="form-calendar" type="button"></button>
               </p>
               <p>
                 <label class="form-adults">Взрослые:
                   <input type="text" class="adults" name="adults" placeholder="2">
+                  <button class="form-minus" type="button"></button>
+                  <button class="form-plus" type="button"></button>
                 </label>
               </p>
               <p>
                 <label class="form-children">Дети:
                   <input type="text" class="children" name="children" placeholder="0">
+                  <button class="form-minus" type="button"></button>
+                  <button class="form-plus" type="button"></button>
                 </label>
               </p>
               <p>
