--- a/inner.html
+++ b/inner.html
@@ -109,8 +109,8 @@
               <span>Апартаменты</span>
               <span>От 2000 р.</span>
               <p class="catalog-item-button">
-                <button class="button-more" type="button">Подробнее</button>
-                <button class="button-booking" type="button">Забронировать</button>
+                <a class="button-more" href="#">Подробнее</a>
+                <a class="button-booking" href="#">Забронировать</a>
               </p>
             </div>
           </div>
