--- a/inner.html
+++ b/inner.html
@@ -106,8 +106,8 @@
               <span>Гостиница</span>
               <span>От 4000 р.</span>
               <p class="catalog-item-button">
-                <button class="button-more" type="button">Подробнее</button>
-                <button class="button-booking" type="button">Забронировать</button>
+                <a class="button-more" href="#">Подробнее</a>
+                <a class="button-booking" href="#">Забронировать</a>
               </p>
             </div>
           </div>
@@ -134,8 +134,8 @@
               <span>Мотель</span>
               <span>От 3000 р.</span>
               <p class="catalog-item-button">
-                <button class="button-more" type="button">Подробнее</button>
-                <button class="button-booking" type="button">Забронировать</button>
+                <a class="button-more" href="#">Подробнее</a>
+                <a class="button-booking" href="#">Забронировать</a>
               </p>
             </div>
           </div>
