базовая стилизация главной страницы

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <header class="main-header">
         <nav class="main-navigation">
-          <img src="img/logo-sedona.svg" width="150" height="150" alt="Логотип города Седона">
+          <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона">
           <ul class="site-navigation">
             <li><a href="information.html">Информация</a></li>
             <li><a href="photo.html">Фото и видео</a></li>
@@ -21,7 +24,7 @@
       <main>
         <h1 class="visually-hidden">Седона</h1>
         <section class="banner">
-          <img src="img/intro-welcome.svg" width="320" height="200" alt="Баннер Добро пожаловать в Седону">
+          <img src="img/intro-welcome.svg" width="460" height="346" alt="Баннер Добро пожаловать в Седону">
         </section>
 
         <section class="subtitle">
@@ -36,24 +39,24 @@
             <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
           <div class="feature-image">
-            <img src="img/index-pic1.jpg" width="300" height="100" alt="Настоящий городок">
+            <img src="img/index-pic1.jpg" width="800" height="256" alt="Настоящий городок">
           </div>
         </section>
 
         <section class="offers">
           <ul class="offers-list">
             <li class="offers-item">
-              <img src="img/icon-1.svg" width="50" height="50" alt="Жилье">
+              <img src="img/icon-1.svg" width="76" height="74" alt="Жилье">
               <h2>Жилье</h2>
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="offers-item">
-              <img src="img/icon-2.svg" width="50" height="50" alt="Еда">
+              <img src="img/icon-2.svg" width="76" height="70" alt="Еда">
               <h2>Еда</h2>
               <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="offers-item">
-              <img src="img/icon-3.svg" width="50" height="50" alt="Сувениры">
+              <img src="img/icon-3.svg" width="65" height="76" alt="Сувениры">
               <h2>Сувениры</h2>
               <p>Не только китайского, но и местного производства!</p>
             </li>
@@ -62,7 +65,7 @@
 
         <section class="feature">
           <div class="feature-image">
-            <img src="img/index-pic2.jpg" width="300" height="100" alt="Мост дьявола">
+            <img src="img/index-pic2.jpg" width="800" height="256" alt="Мост дьявола">
           </div>
           <div class="feature-text">
             <h2>Там есть мост дьявола</h2>
@@ -99,27 +102,27 @@
             <form class="form-search" action="https://echo.htmlacademy.ru" method="post">
               <p>
                 <label class="form-arrival">Дата заезда:
-                  <input type="text" class="arrival" name="arrival" placeholder="24 апреля 2017">
+                  <input type="text" class="arrival" name="arrival" value="24 апреля 2017">
                 </label>
                 <button class="form-calendar" type="button"></button>
               </p>
               <p>
                 <label class="form-departure">Дата выезда:
-                  <input type="text" class="departure" name="departure" placeholder="4 июля 2017">
+                  <input type="text" class="departure" name="departure" value="4 июля 2017">
                 </label>
                 <button class="form-calendar" type="button"></button>
               </p>
               <p>
                 <label class="form-adults">Взрослые:
                   <button class="form-minus" type="button"></button>
-                  <input type="text" class="adults" name="adults" placeholder="2">
+                  <input type="text" class="adults" name="adults" value="2">
                   <button class="form-plus" type="button"></button>
                 </label>
               </p>
               <p>
                 <label class="form-children">Дети:
                   <button class="form-minus" type="button"></button>
-                  <input type="text" class="children" name="children" placeholder="0">
+                  <input type="text" class="children" name="children" value="0">
                   <button class="form-plus" type="button"></button>
                 </label>
               </p>
@@ -131,7 +134,7 @@
         </section>
 
         <section class="map">
-          <img src="img/map.png" width="300" height="200" alt="Карта">
+          <img src="img/map.png" width="1200" height="473" alt="Карта">
         </section>
       </main>
 
@@ -147,7 +150,7 @@
         <p class="footer-copyright">
           <b>website by</b>
           <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo-htmlacademy.svg" width="100" height="80" alt="Логотип разработчика">
+            <img src="img/logo-htmlacademy.svg" width="115" height="40" alt="Логотип разработчика">
           </a>
         </p>
       </footer>
