--- a/inner.html
+++ b/inner.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
-        <img src="img/logo-sedona.svg" width="150" height="150" alt="Логотип города Седона">
+        <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона">
       </a>
       <ul class="site-navigation">
         <li><a href="information.html">Информация</a></li>
@@ -190,7 +193,7 @@
     <p class="footer-copyright">
       <b>website by</b>
       <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-htmlacademy.svg" width="100" height="80" alt="Логотип разработчика">
+        <img src="img/logo-htmlacademy.svg" width="115" height="40" alt="Логотип разработчика">
       </a>
     </p>
   </footer>
