базовая стилизация внутренней страницы

--- a/inner.html
+++ b/inner.html
@@ -17,7 +17,7 @@
         <li><a href="information.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map-state.html">Карта штата</a></li>
-        <li class="site-navigation"><a href="inner.html">Гостиницы</a></li>
+        <li class="hotel-navigation"><a href="inner.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
@@ -100,7 +100,7 @@
         <li class="catalog-item">
           <div class="catalog-item-left">
             <a class="catalog-image-item" href="catalog-item.html">
-              <img src="img/inner-pic1.jpg" width="50" height="40" alt="Фото гостиницы">
+              <img src="img/inner-pic1.jpg" width="136" height="90" alt="Фото гостиницы">
             </a>
             <div class="catalog-item-info">
               <h2 class="catalog-item-title">
@@ -128,7 +128,7 @@
         <li class="catalog-item">
           <div class="catalog-item-left">
             <a class="catalog-image-item" href="catalog-item.html">
-              <img src="img/inner-pic2.jpg" width="50" height="40" alt="Фото мотеля">
+              <img src="img/inner-pic2.jpg" width="136" height="90" alt="Фото мотеля">
             </a>
             <div class="catalog-item-info">
               <h2 class="catalog-item-title">
@@ -155,7 +155,7 @@
         <li class="catalog-item">
           <div class="catalog-item-left">
             <a class="catalog-image-item" href="catalog-item.html">
-              <img src="img/inner-pic3.jpg" width="50" height="40" alt="Фото апартаментов">
+              <img src="img/inner-pic3.jpg" width="136" height="90" alt="Фото апартаментов">
             </a>
             <div class="catalog-item-info">
               <h2 class="catalog-item-title">
