Бонусное задание: завершаем базовую стилизацию личного проекта

--- a/inner.html
+++ b/inner.html
@@ -74,7 +74,14 @@
       </fieldset>
       <fieldset>
         <legend>Стоимость в сутки(р):</legend>
-
+          <ul class="form-cost">
+            <li>
+              <input class="form-window" type="text" name="window" value="от 0">
+            </li>
+            <li>
+              <input class="form-window" type="text" name="window" value="до 3000">
+            </li>
+          </ul>
         <button class="form-button" type="submit">Показать</button>
       </fieldset>
     </form>
